Bug 106155 - LO 5.3.0.3 does not start when opengl activated
Summary: LO 5.3.0.3 does not start when opengl activated
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
5.3.0.3 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.4.0 target:5.3.3
Keywords:
Depends on:
Blocks: OpenGL-Linux
  Show dependency treegraph
 
Reported: 2017-02-23 14:40 UTC by robsn5
Modified: 2017-03-29 12:35 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
backtrace when UseOpenGL =true (77.82 KB, application/octet-stream)
2017-02-24 07:15 UTC, Friedmann Bruno
Details
Backtrace with derbug information (189.12 KB, application/x-lzma)
2017-02-26 12:18 UTC, Arnaud Versini
Details
another complete bt with debug symbols (97.22 KB, application/x-lzma)
2017-02-26 13:01 UTC, Friedmann Bruno
Details

Note You need to log in before you can comment on or make changes to this bug.
Description robsn5 2017-02-23 14:40:27 UTC
LO is not starting anymore after the update from 5.2 series to 5.3 in openSUSE Tumbleweed. The splash window is shortly shown and then it is crashing. Removing the user profile settings and starting from default settings restores the startup. Activating opengl again leads to the crash again.
Verified by 2-3 other users on the openSUSE Factory-Mailing list.


Version: 5.3.0.3
Build ID: 30m0(Build:3)
CPU Threads: 4; OS Version: Linux 4.9; UI Render: default; VCL: kde4; Layout Engine: new; 
Locale: en-US (en_US.UTF-8); Calc: group
Comment 1 Friedmann Bruno 2017-02-23 18:08:52 UTC
To add informations those specific flags can we used to save old profiles

You can save your old configuration by editing the file

~/.config/libreoffice/4/user/registrymodifications.xcu

and set the following values to false

<item oor:path="/org.openoffice.Office.Common/VCL"><prop oor:name="ForceOpenGL" oor:op="fuse"><value>false</value></prop></item>

<item oor:path="/org.openoffice.Office.Common/VCL"><prop oor:name="UseOpenGL" oor:op="fuse"><value>false</value></prop></item>

the values are true if you try to activate opengl

openSUSE Tumbleweed 20170219
Linux 4.9.10-1-default x86_64 GNU/Linux, nvidia: 378.13
Qt: 5.7.1, KDE Frameworks: 5.30.0, Plasma: 5.9.2, kmail2 5.4.2
Libreoffice 5.3.0.3-1.1
Comment 2 Robert Großkopf 2017-02-23 18:23:47 UTC
Could confirm the buggy behavior with
OpenSUSE 42.1 64bit rpm Linux.
LibreOffice Version: 5.3.0.3
Build-ID: 7074905676c47b82bbcfbea1aeefc84afe1c50e1
CPU-Threads: 4; BS-Version: Linux 4.1; UI-Render: Standard; VCL: kde4; Layout-Engine: neu; 
Gebietsschema: de-DE (de_DE.UTF-8); Calc: group

Isn't a special Base-bug. So I will switch it to "graphics stack"
Comment 3 Friedmann Bruno 2017-02-24 07:15:02 UTC
Created attachment 131435 [details]
backtrace when UseOpenGL  =true

NVIDIA drivers 378.18
Mesa 17.0.0-155.1
xorg 1.19.1-3.1
Comment 4 Arnaud Versini 2017-02-26 11:12:59 UTC
Hello,

It seems to be a recursive VCL stack initialisation.
Comment 5 Aron Budea 2017-02-26 11:26:53 UTC
Might be a duplicate of bug 105453.
Could you give 5.3.1.1 a try, available here: http://dev-builds.libreoffice.org/pre-releases/
Instructions on installing separately: https://wiki.documentfoundation.org/Installing_in_parallel
Comment 6 Arnaud Versini 2017-02-26 11:50:17 UTC
Confirmed on up-to-date master, I will produce full bt
Comment 7 Arnaud Versini 2017-02-26 12:18:27 UTC
Created attachment 131476 [details]
Backtrace with derbug information
Comment 8 Arnaud Versini 2017-02-26 12:22:45 UTC
Seems related to the KDE VCL plugin, it doesn't crash under Gtk3/wayland
Comment 9 Friedmann Bruno 2017-02-26 13:01:38 UTC
Created attachment 131477 [details]
another complete bt with debug symbols

redone correct and complete backtrace.
nvidia 378-13 build with -a --ui=none -no-x-check --glvnd-glx-client --glvnd-egl-client --no-network
Comment 10 Arnaud Versini 2017-03-27 18:28:18 UTC
Hello Caolan,

Perhaps this bug interest you, it's a recursive start with OpenGL activated.

Thanks
Comment 11 Caolán McNamara 2017-03-27 20:11:13 UTC
This looks similar to bug 103626
Comment 12 Commit Notification 2017-03-28 13:25:22 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b012e83e1cd09a0b6f9ede94a5c2d72d24459ce4

Resolves: tdf#106155 avoid opengl for toplevel X window icons

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2017-03-29 12:35:03 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b96c52baa6b9607d9a31cd1b34162e4ee041f9b6&h=libreoffice-5-3

Resolves: tdf#106155 avoid opengl for toplevel X window icons

It will be available in 5.3.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.