Resolves: tdf#106155 avoid opengl for toplevel X window icons

because an opengl context requires a toplevel window so it recurses to death.

Only the gen/kde4 vclplugs are affected here

Change-Id: If5396d183d90d1872931b170dc90c3a70d8ea6b6
(cherry picked from commit b012e83e1cd09a0b6f9ede94a5c2d72d24459ce4)